--- a/src/speaker.html
+++ b/src/speaker.html
@@ -2,226 +2,261 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,user-scalable=0">
-	<title>関西フロントエンドカンファレンス2016</title>
+<meta name="viewport" content="width=device-width,user-scalable=0">
+<title>FRONTEND CONFERENCE 2016</title>
 
-	<meta name="description" content="関西最大級のフロントエンドの祭典、forntend conference 2016!! 大阪梅田 にて 2016.03.05 開催!">
-	<meta name="keywords" content="フロントエンド,関西フロントエンドUG,関西フロントエンドカンファレンス2016">
-	<meta property="og:title" content="関西フロントエンドカンファレンス2016">
-	<meta property="og:type" content="article">
-	<meta property="og:url" content="ダミーurl">
-	<meta property="og:site_name" content="関西フロントエンドカンファレンス2016">
-	<meta property="og:description" content="関西最大級のフロントエンドの祭典、forntend conference 2016!! 大阪梅田 にて 2016.03.05 開催!">
-	<meta property="og:image" content="ダミーog画像">
+<meta name="description" content="関西最大級のフロントエンドの祭典、FRONTEND CONFERENCE 2016!! 大阪梅田 にて 2016.03.05 開催!">
+<meta name="keywords" content="フロントエンド,関西フロントエンドUG,KFUG,FRONTEND CONFERENCE,フロントエンドカンファレンス2016">
+<meta property="og:title" content="フロントエンドカンファレンス2016">
+<meta property="og:type" content="article">
+<meta property="og:url" content="http://kfug.github.io/frontconf2016/">
+<meta property="og:site_name" content="フロントエンドカンファレンス2016">
+<meta property="og:description" content="関西最大級のフロントエンドの祭典、FRONTEND CONFERENCE 2016!! 大阪梅田 にて 2016.03.05 開催!">
+<meta property="og:image" content="http://kfug.github.io/frontconf2016/img/fec_main.png">
 
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/ihover.min.css">
-	<link rel="stylesheet" href="css/hover.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/style.css">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/ihover.min.css">
+<link rel="stylesheet" href="css/hover.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/common.css">
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
-	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-	<script type="text/javascript" src="js/functions.js"></script>
+<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 
+
+	<style>
+		.sublogo{
+			width:100%;
+			max-width: 980px;
+			margin: 0 auto;
+			display: block;
+		}
+	</style>
 </head>
 <body id="speaker">
 <div id="floating">
-	<p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
+    <p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
 </div><!-- /#floating -->
 <header id="top-head">
-	<div class="inner">
-		<div id="mobile-head">
-			<h1 class="logo"><a href="/">Logo</a></h1>
-			<div id="nav-toggle">
-				<div>
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
-			</div>
-		</div>
-		<nav id="global-nav">
-			<ul>
-				<li><a href="/#about" class="hvr-underline-from-center">ABOUT</a></li>
-				<!-- <li><a href="/#news" class="hvr-underline-from-center">NEWS</a></li> -->
-				<!-- <li><a href="/#timetable" class="hvr-underline-from-center">TIME TABLE</a></li> -->
-				<li><a href="/#access" class="hvr-underline-from-center">ACCESS</a></li>
-				<li><a href="/#speaker" class="hvr-underline-from-center">SPEAKER</a></li>
-				<li><a href="/#faq" class="hvr-underline-from-center">FAQ</a></li>
-				<li><a href="/#contact" class="hvr-underline-from-center">CONTACT</a></li>
-			</ul>
-		</nav>
-	</div>
+    <div class="inner">
+        <div id="mobile-head">
+            <h1 class="logo"><a href="./"><img src="./img/logo_kfug_lucid.png" alt="" style="height: 1.5em;"></a></h1>
+            <div id="nav-toggle">
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <nav id="global-nav">
+            <ul>
+                <li><a href="#about" class="hvr-underline-from-center">ABOUT</a></li>
+                <li><a href="#news" class="hvr-underline-from-center">NEWS</a></li>
+                <!-- <li><a href="#timetable" class="hvr-underline-from-center">TIME TABLE</a></li> -->
+                <li><a href="#access" class="hvr-underline-from-center">ACCESS</a></li>
+                <li><a href="#speaker" class="hvr-underline-from-center">SPEAKER</a></li>
+                <li><a href="#faq" class="hvr-underline-from-center">FAQ</a></li>
+                <li><a href="#contact" class="hvr-underline-from-center">CONTACT</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 
+
+
 <div id="content-wraper">
+	<img class="sublogo" src="./img/fec_main.jpg" alt="">
 	<section class="pagettl column">
 		<div class="inner">
-			<h2 class="animated bounceInDown">SPEAKER</h2>
+			<h2 class="animated bounceInDown">セッション一覧 - SPEAKERS</h2>
 		</div><!-- /.inner -->
 	</section><!-- /.column -->
-	<section class="column hole">
-		<div class="inner">
-			<div class="l">
-				<div class="border"><h3>Aホール</h3>
-					<ul class="speaker-list">
-						<li><a href="#ishida hvr-icon-down">石田　三成</a></li>
-						<li><a href="#shima hvr-icon-down">島　左近</a></li>
-					</ul>
-					<!-- /.speaker-list -->
-				</div><!-- /.border -->
-			</div>
-			<div class="r">
-				<div class="border">
-					<h3>Bホール</h3>
-					<ul class="speaker-list">
-						<li><a href="#kuroda hvr-icon-down">黒田　長政</a></li>
-						<li><a href="#hosokawa hvr-icon-down">細川　忠興</a></li>
-					</ul>
-				</div><!-- /.border -->
-			</div>
-		</div><!-- /.inner -->
-	</section><!-- /.column -->
+	<!--<section class="column hole">-->
+		<!--<div class="inner">-->
+			<!--<div class="l">-->
+				<!--<div class="border"><h3>Aホール</h3>-->
+					<!--<ul class="speaker-list">-->
+						<!--<li><a href="#ishida hvr-icon-down">石田　三成</a></li>-->
+						<!--<li><a href="#shima hvr-icon-down">島　左近</a></li>-->
+					<!--</ul>-->
+					<!--&lt;!&ndash; /.speaker-list &ndash;&gt;-->
+				<!--</div>&lt;!&ndash; /.border &ndash;&gt;-->
+			<!--</div>-->
+			<!--<div class="r">-->
+				<!--<div class="border">-->
+					<!--<h3>Bホール</h3>-->
+					<!--<ul class="speaker-list">-->
+						<!--<li><a href="#kuroda hvr-icon-down">黒田　長政</a></li>-->
+						<!--<li><a href="#hosokawa hvr-icon-down">細川　忠興</a></li>-->
+					<!--</ul>-->
+				<!--</div>&lt;!&ndash; /.border &ndash;&gt;-->
+			<!--</div>-->
+		<!--</div>&lt;!&ndash; /.inner &ndash;&gt;-->
+	<!--</section>&lt;!&ndash; /.column &ndash;&gt;-->
 	
 	<section class="column speaker" id="A020">
 		<div class="inner">
-		<div class="label time"></div>
-		<div class="label hole a-hole"></div>
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
 			<div class="cf">
 			<div class="speaker-img">
 					<p class="img">
-						<img src="./images/speakers/A020.jpg">
+						<img style="width:100%;" src="./images/speakers/A020.jpg">
 					</p><!-- /.img -->
 				</div><!-- /.speaker-img -->
 				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">Extended HTML - WAI-ARIAとMicrodataでHTMLを拡張する</h2>
 					<h1>桝田 草一</h1>
 					<p>HTML5は普及してきていますが、HTML5を拡張するための関連仕様であるWAI-ARIA（アクセシビリティ）やMicrodata（構造化データ）はHTML5そのものと比較してまだまだ使われていないのではないでしょうか。このセッションでは、WAI-ARIAやMicrodataをJavaScriptやCMSから利用するために具体的な実装方法や検証方法を紹介します。</p>
 				</div><!-- /.speaker-detail -->
 			</div><!-- /.cf -->
-			<ul class="tag">
-				<li><span>Aホール</span></li>
-				<li><span>豊臣</span></li>
-			</ul><!-- /.tag -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
 	<section class="column speaker" id="A032">
 		<div class="inner">
-		<div class="label time"></div>
-		<div class="label hole a-hole"></div>
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
 			<div class="cf">
 			<div class="speaker-img">
 					<p class="img">
-						<img src="./images/speakers/A032.jpg">
+						<img style="width:100%;" src="./images/speakers/A032.jpg">
 					</p><!-- /.img -->
 				</div><!-- /.speaker-img -->
 				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">Sencha Ext JS 6 の紹介</h2>
 					<h1>中村 久司</h1>
 					<p>Sencha Touch で名を馳せた Sencha のフレームワークは、デスクトップ用の Ext JS と統合され、デスクトップからモバイルまで全てのデバイスをサポートするフレームワークとなりました。
 最新の Ext JS 6 について解説します。</p>
 				</div><!-- /.speaker-detail -->
 			</div><!-- /.cf -->
-			<ul class="tag">
-				<li><span>Aホール</span></li>
-				<li><span>豊臣</span></li>
-			</ul><!-- /.tag -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
 	<section class="column speaker" id="A040">
 		<div class="inner">
-		<div class="label time"></div>
-		<div class="label hole a-hole"></div>
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
 			<div class="cf">
 			<div class="speaker-img">
 					<p class="img">
-						<img src="./images/speakers/A040.jpg">
+						<img style="width:100%;" src="./images/speakers/A040.jpg">
 					</p><!-- /.img -->
 				</div><!-- /.speaker-img -->
 				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">Webサイトパフォーマンス管理の基礎知識</h2>
 					<h1>竹洞 陽一郎</h1>
-					<p></p>
+					<p>Webサイトパフォーマンス管理は、表示速度と繋がりやすさを軸とした、配信品質管理です。
+分析においては、統計学の知識が必要となっています。
+また、スマートフォンでのブラウジングの増大に伴い、携帯ネットワークの知識が求められ、
+UXの観点から神経物理学、行動経済学の知識が必要となっています。
+そのようなWebサイトパフォーマンス管理に必要な基礎知識の概要を説明します。</p>
 				</div><!-- /.speaker-detail -->
 			</div><!-- /.cf -->
-			<ul class="tag">
-				<li><span>Aホール</span></li>
-				<li><span>豊臣</span></li>
-			</ul><!-- /.tag -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
 	<section class="column speaker" id="B020">
 		<div class="inner">
-		<div class="label time"></div>
-		<div class="label hole a-hole"></div>
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
 			<div class="cf">
 			<div class="speaker-img">
 					<p class="img">
-						<img src="./images/speakers/B020.jpg">
+						<img style="width:100%;" src="./images/speakers/B020.jpg">
 					</p><!-- /.img -->
 				</div><!-- /.speaker-img -->
 				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">グロースハックを実現する「モジュールデザイン」とCSS設計</h2>
 					<h1>榊原昌彦	</h1>
-					<p></p>
+					<p>paperデザインとwebデザインの一番大きな違いは「webのデザインは成長すること」。
+では、どうやったら成長するwebをデザインすることができるか。基本的な考え方から、実例紹介、それを支える技術を紹介します。デザイナーに聞いてもらいたいエンジニアリング話です。</p>
 				</div><!-- /.speaker-detail -->
 			</div><!-- /.cf -->
-			<ul class="tag">
-				<li><span>Aホール</span></li>
-				<li><span>豊臣</span></li>
-			</ul><!-- /.tag -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
 	<section class="column speaker" id="B050">
 		<div class="inner">
-		<div class="label time"></div>
-		<div class="label hole a-hole"></div>
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
 			<div class="cf">
 			<div class="speaker-img">
 					<p class="img">
-						<img src="./images/speakers/B050.jpg">
+						<img style="width:100%;" src="./images/speakers/B050.jpg">
 					</p><!-- /.img -->
 				</div><!-- /.speaker-img -->
 				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">超軽量 Sass ライブラリ Bourbon/Neat のススメ</h2>
 					<h1>Kite</h1>
-					<p></p>
+					<p>BootStrap などの CSS フレームワークが抱える根本的な問題を解決してくれる Bourbon/Neat という超軽量 Sass ライブラリをご紹介します。Bourbon ツールセット (Bourbon/Neat/Bitter/Refills) の説明や使うメリットをお話し、それらを使ったライブコーディングを行う予定です。</p>
 				</div><!-- /.speaker-detail -->
 			</div><!-- /.cf -->
-			<ul class="tag">
-				<li><span>Aホール</span></li>
-				<li><span>豊臣</span></li>
-			</ul><!-- /.tag -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
+	<section>
+		<br><br><br>
+		<p style="text-align: center;font-size: 1.5em;font-weight: bold;color: #999">and more ...</p>
+	</section>
 
 	<div id="page-top" class="hvr-icon-bob">
 		<a href="#content-wraper">PAGE TOP</a>
 	</div>
 
-	<footer>
-		<small>&copy; Kansai Frontend UG</small>
-		<ul class="snsbox cf">
-				<li><a href="https://www.facebook.com/groups/kansai.frontend/" target="_blank">facebook</a></li>
-				<li><a href="https://twitter.com/frontkansai" target="_blank">twitter</a></li>
-				<li><a href="http://kfug.connpass.com/" target="_blank">connpass</a></li>
-			</ul>
-	</footer>
+	<footer id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <br>
+                <img class="footerLogo" src="./img/logo_kfug_lucid.png" alt="">
+            </div>
+            <div class="col-sm-6 linkArea">
+                <h3 id="contact">CONTACT</h3>
+                <p>
+                    お問い合わせは
+                    <a href="https://www.facebook.com/frontconf2016/" target="_blank">Facebookページ</a>
+                    または
+                    <a href="https://twitter.com/frontkansai" target="_blank">Twitter公式アカウント</a>
+                    よりお願いします。
+                </p>
+                <p>
+                    その他関西フロントエンドUGのイベント情報は
+                    <a href="http://kfug.connpass.com/">Connpassページ</a>
+                    や
+                    <a href="https://www.facebook.com/groups/kansai.frontend">Facebookグループ</a>
+                    よりご確認ください。
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
 </div>
 <!-- /#contentWraper -->
 
-
-
-
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-66526811-4', 'auto');
-  ga('send', 'pageview');
-</script>
 </body>
 </html>
