--- a/speaker.html
+++ b/speaker.html
@@ -98,6 +98,29 @@
 		<!--</div>&lt;!&ndash; /.inner &ndash;&gt;-->
 	<!--</section>&lt;!&ndash; /.column &ndash;&gt;-->
 	
+	<section class="column speaker" id="A010">
+		<div class="inner">
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
+			<div class="cf">
+			<div class="speaker-img">
+					<p class="img">
+						<img style="width:100%;" src="./images/speakers/A010.jpg">
+					</p><!-- /.img -->
+				</div><!-- /.speaker-img -->
+				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">大型フロントエンド開発におけるTypeScriptとDDD</h2>
+					<h1>奥野 賢太郎</h1>
+					<p>ChatWork株式会社におけるフロントエンド開発に採り入れたTypeScript、およびDDD（ドメイン駆動設計）について、実務での利点、失敗、工夫を交えたスケールアップさせていく段階的構築の手法をお伝えします。</p>
+				</div><!-- /.speaker-detail -->
+			</div><!-- /.cf -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
+		</div><!-- /.inner -->
+	</section><!-- /.column speaker -->
+	
 	<section class="column speaker" id="A020">
 		<div class="inner">
 		<!--<div class="label time"></div>-->
