--- a/src/handson.html
+++ b/src/handson.html
@@ -135,6 +135,11 @@
 					<!--<span class="tag">エンジニア向け</span>-->
 				</li>
 				
+				<li><a class="scroll" data-target="#seminorSP007">Angular2 + TypeScriptで本格Webアプリ開発</a>
+					<!--<span class="tag">デザイナー向け</span>-->
+					<!--<span class="tag">エンジニア向け</span>-->
+				</li>
+				
 			</ul>
 		</div>
 		</div>
@@ -292,6 +297,34 @@
 					<h1>国際化に対応できるサイトの導入</h1>
 					<!--<span class="tag">デザイナー向け</span>-->
 					<p>Webサイトの外国語対応は難しくないですが、また試したことがない人はたくさんいます。簡単なサンプルを使って外国語対応のためのワークフローを紹介します。翻訳、通貨、SEOなど、基本だけど大切なコンゼプトを抑えながら勉強しましょう。</p>
+				</div>
+				<!--<div class="row detail">-->
+					<!--<div class="col-sm-6 speaker-prof">-->
+						<!--<div class="prof-detail">-->
+							<!--<dl>-->
+								<!--<dt>講師</dt>-->
+								<!--<dd class="col-sm-4"><img class="prof-img" src="http://placehold.it/100x100/ccc/fff/&text=prof-img" alt=""></dd>-->
+								<!--<dd class="name">ほにゃにゃさん</dd>-->
+								<!--<dd>ほにょほにょほにょ</dd>-->
+							<!--</dl>-->
+						<!--</div>-->
+					<!--</div>-->
+					<!--<div class="col-sm-6 handson-detail">-->
+						<!--<dl>-->
+							<!--<dt>時間</dt>-->
+							<!--<dd>20:00 - 23:00</dd>-->
+							<!--<dd class="time">3時間</dd>-->
+						<!--</dl>-->
+					<!--</div>-->
+				<!--</div>-->
+				<div class="btn-join"><a class="scroll" data-target="#handson-info">参加する！</a></div>
+			</div>
+			
+			<div class="handson-list" id="seminorSP007">
+				<div class="heading">
+					<h1>Angular2 + TypeScriptで本格Webアプリ開発</h1>
+					<!--<span class="tag">デザイナー向け</span>-->
+					<p>大規模なSPA(Single Page Application)開発では、AngularなどのフレームワークやTypeScriptなどのAltJS言語が使われることが増えてきましたが、まだまだ難しそうなイメージがありますよね？このハンズオンではAngular2とTypeScriptによるWebアプリ開発を学ぶことができます。まずは怖がらずに手を動かして体験してみましょう！大規模SPA開発じゃなくても便利なんですよ？</p>
 				</div>
 				<!--<div class="row detail">-->
 					<!--<div class="col-sm-6 speaker-prof">-->
