--- a/src/speaker.html
+++ b/src/speaker.html
@@ -145,6 +145,29 @@
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
+	<section class="column speaker" id="A050">
+		<div class="inner">
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
+			<div class="cf">
+			<div class="speaker-img">
+					<p class="img">
+						<img style="width:100%;" src="./images/speakers/A050.jpg">
+					</p><!-- /.img -->
+				</div><!-- /.speaker-img -->
+				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">HTML5のAPI群をただひたすらに触ってみた記録</h2>
+					<h1>花谷拓磨</h1>
+					<p>HTML5には様々なAPIがありますが、今だあまり使われていない技術も数多く有ります。そんなHTML5のAPIたちに触れてみた所感をお話します。</p>
+				</div><!-- /.speaker-detail -->
+			</div><!-- /.cf -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
+		</div><!-- /.inner -->
+	</section><!-- /.column speaker -->
+	
 	<section class="column speaker" id="A031">
 		<div class="inner">
 		<!--<div class="label time"></div>-->
@@ -192,71 +215,20 @@
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
-	<section class="column speaker" id="A040">
+	<section class="column speaker" id="B050">
 		<div class="inner">
 		<!--<div class="label time"></div>-->
 		<!--<div class="label hole a-hole"></div>-->
 			<div class="cf">
 			<div class="speaker-img">
 					<p class="img">
-						<img style="width:100%;" src="./images/speakers/A040.jpg">
+						<img style="width:100%;" src="./images/speakers/B050.jpg">
 					</p><!-- /.img -->
 				</div><!-- /.speaker-img -->
 				<div class="speaker-detail">
-					<h2 style="font-size: 1.5em;margin: .5em 0 ">Webサイトパフォーマンス管理の基礎知識</h2>
-					<h1>竹洞 陽一郎</h1>
-					<p>Webサイトパフォーマンス管理は、表示速度と繋がりやすさを軸とした、配信品質管理です。
-分析においては、統計学の知識が必要となっています。
-また、スマートフォンでのブラウジングの増大に伴い、携帯ネットワークの知識が求められ、
-UXの観点から神経物理学、行動経済学の知識が必要となっています。
-そのようなWebサイトパフォーマンス管理に必要な基礎知識の概要を説明します。</p>
-				</div><!-- /.speaker-detail -->
-			</div><!-- /.cf -->
-			<!--<ul class="tag">-->
-				<!--<li><span>Aホール</span></li>-->
-				<!--<li><span>豊臣</span></li>-->
-			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
-		</div><!-- /.inner -->
-	</section><!-- /.column speaker -->
-	
-	<section class="column speaker" id="A050">
-		<div class="inner">
-		<!--<div class="label time"></div>-->
-		<!--<div class="label hole a-hole"></div>-->
-			<div class="cf">
-			<div class="speaker-img">
-					<p class="img">
-						<img style="width:100%;" src="./images/speakers/A050.jpg">
-					</p><!-- /.img -->
-				</div><!-- /.speaker-img -->
-				<div class="speaker-detail">
-					<h2 style="font-size: 1.5em;margin: .5em 0 ">HTML5のAPI群をただひたすらに触ってみた記録</h2>
-					<h1>花谷拓磨</h1>
-					<p>HTML5には様々なAPIがありますが、今だあまり使われていない技術も数多く有ります。そんなHTML5のAPIたちに触れてみた所感をお話します。</p>
-				</div><!-- /.speaker-detail -->
-			</div><!-- /.cf -->
-			<!--<ul class="tag">-->
-				<!--<li><span>Aホール</span></li>-->
-				<!--<li><span>豊臣</span></li>-->
-			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
-		</div><!-- /.inner -->
-	</section><!-- /.column speaker -->
-	
-	<section class="column speaker" id="B020">
-		<div class="inner">
-		<!--<div class="label time"></div>-->
-		<!--<div class="label hole a-hole"></div>-->
-			<div class="cf">
-			<div class="speaker-img">
-					<p class="img">
-						<img style="width:100%;" src="./images/speakers/B020.jpg">
-					</p><!-- /.img -->
-				</div><!-- /.speaker-img -->
-				<div class="speaker-detail">
-					<h2 style="font-size: 1.5em;margin: .5em 0 ">グロースハックを実現する「モジュールデザイン」とCSS設計</h2>
-					<h1>榊原昌彦	</h1>
-					<p>paperデザインとwebデザインの一番大きな違いは「webのデザインは成長すること」。
-では、どうやったら成長するwebをデザインすることができるか。基本的な考え方から、実例紹介、それを支える技術を紹介します。デザイナーに聞いてもらいたいエンジニアリング話です。</p>
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">超軽量 Sass ライブラリ Bourbon/Neat のススメ</h2>
+					<h1>Kite</h1>
+					<p>BootStrap などの CSS フレームワークが抱える根本的な問題を解決してくれる Bourbon/Neat という超軽量 Sass ライブラリをご紹介します。Bourbon ツールセット (Bourbon/Neat/Bitters/Refills) の説明や使うメリットをお話し、それらを使ったライブコーディングを行う予定です。</p>
 				</div><!-- /.speaker-detail -->
 			</div><!-- /.cf -->
 			<!--<ul class="tag">-->
@@ -290,20 +262,71 @@ UXの観点から神経物理学、行動経済学の知識が必要となって
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
 	
-	<section class="column speaker" id="B050">
+	<section class="column speaker" id="A040">
 		<div class="inner">
 		<!--<div class="label time"></div>-->
 		<!--<div class="label hole a-hole"></div>-->
 			<div class="cf">
 			<div class="speaker-img">
 					<p class="img">
-						<img style="width:100%;" src="./images/speakers/B050.jpg">
+						<img style="width:100%;" src="./images/speakers/A040.jpg">
 					</p><!-- /.img -->
 				</div><!-- /.speaker-img -->
 				<div class="speaker-detail">
-					<h2 style="font-size: 1.5em;margin: .5em 0 ">超軽量 Sass ライブラリ Bourbon/Neat のススメ</h2>
-					<h1>Kite</h1>
-					<p>BootStrap などの CSS フレームワークが抱える根本的な問題を解決してくれる Bourbon/Neat という超軽量 Sass ライブラリをご紹介します。Bourbon ツールセット (Bourbon/Neat/Bitters/Refills) の説明や使うメリットをお話し、それらを使ったライブコーディングを行う予定です。</p>
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">Webサイトパフォーマンス管理の基礎知識</h2>
+					<h1>竹洞 陽一郎</h1>
+					<p>Webサイトパフォーマンス管理は、表示速度と繋がりやすさを軸とした、配信品質管理です。
+分析においては、統計学の知識が必要となっています。
+また、スマートフォンでのブラウジングの増大に伴い、携帯ネットワークの知識が求められ、
+UXの観点から神経物理学、行動経済学の知識が必要となっています。
+そのようなWebサイトパフォーマンス管理に必要な基礎知識の概要を説明します。</p>
+				</div><!-- /.speaker-detail -->
+			</div><!-- /.cf -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
+		</div><!-- /.inner -->
+	</section><!-- /.column speaker -->
+	
+	<section class="column speaker" id="A060">
+		<div class="inner">
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
+			<div class="cf">
+			<div class="speaker-img">
+					<p class="img">
+						<img style="width:100%;" src="./images/speakers/A060.jpg">
+					</p><!-- /.img -->
+				</div><!-- /.speaker-img -->
+				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">10年超のサービスにSass導入してモダン化した話</h2>
+					<h1>大出 豪</h1>
+					<p>日本最大級のライブストリーミングサイトを運営しながら、「老舗サイトでもしっかり時代にあわせられるのか？」をテーマに、WEBサイトのモダン化を行いました。Laravel Bladeと、タスクランナーやSASSなどを組み合わせたので、その構成や苦労した所、便利だった所などをお話します。</p>
+				</div><!-- /.speaker-detail -->
+			</div><!-- /.cf -->
+			<!--<ul class="tag">-->
+				<!--<li><span>Aホール</span></li>-->
+				<!--<li><span>豊臣</span></li>-->
+			<!--</ul>&lt;!&ndash; /.tag &ndash;&gt;-->
+		</div><!-- /.inner -->
+	</section><!-- /.column speaker -->
+	
+	<section class="column speaker" id="B020">
+		<div class="inner">
+		<!--<div class="label time"></div>-->
+		<!--<div class="label hole a-hole"></div>-->
+			<div class="cf">
+			<div class="speaker-img">
+					<p class="img">
+						<img style="width:100%;" src="./images/speakers/B020.jpg">
+					</p><!-- /.img -->
+				</div><!-- /.speaker-img -->
+				<div class="speaker-detail">
+					<h2 style="font-size: 1.5em;margin: .5em 0 ">グロースハックを実現する「モジュールデザイン」とCSS設計</h2>
+					<h1>榊原昌彦	</h1>
+					<p>paperデザインとwebデザインの一番大きな違いは「webのデザインは成長すること」。
+では、どうやったら成長するwebをデザインすることができるか。基本的な考え方から、実例紹介、それを支える技術を紹介します。デザイナーに聞いてもらいたいエンジニアリング話です。</p>
 				</div><!-- /.speaker-detail -->
 			</div><!-- /.cf -->
 			<!--<ul class="tag">-->
